Resolve "Improve Opponent Pass Receiver Detection"
Closes #1983

See merge request main/Sumatra!1922

sumatra-commit: a9b3b20ed74ccffec9fa6ef1c2d9f2a8eaffd92b